# DD2470-Music-Informatics-Project

./: .gitignore  Autoencoder_Fabio.ipynb  README.md  baseline_model.py  feature_process.py  fma_dataset.py  hard_fma_dataset.py  model.py  preprocess.py  pyproject.toml  test.ipynb  test.py  test_training.ipynb  train.py  usage.ipynb
fma_metadata/: genre_track_dict.json  interest_bin_dict.json  small.csv  train_val_ids.json  year_created_bin_dict.json
fma_metadata/train/: genre_track_dict.json  interest_bin_dict.json  small.csv  year_created_bin_dict.json
fma_metadata/val/: genre_track_dict.json  interest_bin_dict.json  small.csv  year_created_bin_dict.json
fma_processed/: name_to_index.json
