[project]
name = "dd2470-music-informatics-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=6.29.5",
    "librosa>=0.10.2.post1",
    "matplotlib>=3.9.2",
    "pandas>=2.2.3",
    "pydub>=0.25.1",
    "torch>=2.4.1",
    "torchaudio>=2.4.1",
    "torchvision>=0.19.1",
    "tqdm>=4.66.5",
]
